<resources>
    <string name="app_name">OTA Upgrade</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="scan">扫描</string>
    <string name="Log">日志</string>
    <string name="alert_message_exit">Do you want to exit the application?</string>
    <string name="alert_message_exit_ok">OK</string>
    <string name="alert_message_exit_cancel">Cancel</string>
    <string name="alert_message_connect">Connecting to the device</string>
    <string name="alert_message_log_read">Reading the log file please wait...</string>
    <string name="alert_message_connect_title">Device Connection</string>
    <string name="alert_message_bluetooth_connect">The BLE device is connected</string>
    <string name="alert_message_bluetooth_disconnect">The BLE device is disconnected</string>
    <string name="alert_message_bluetooth_reconnect">Please Turn Bluetooth ON</string>
    <string name="alert_message_reconnect">Your connection has been lost.</string>
    <string name="alert_message_wait">Please wait..</string>
    <string name="alert_message_no_internet">No internet connection</string>
    <string name="alert_message_unkown">Do you want to go to GATT DB ?</string>
    <string name="alert_message_yes">Yes</string>
    <string name="alert_message_no">No</string>
    <string name="alert_message_retry">Retry</string>
    <string name="alert_message_unknown_title">No custom UI available !</string>
    <string name="alert_message_bonding_title">Bonding</string>
    <string name="alert_message_bonding_message">Bonding is in process \nPlease wait..</string>
    <string name="alert_message_prepare_title">Preparing Notifications</string>
    <string name="alert_message_prepare_message">Enabling all available notifications</string>
    <string name="alert_csc_weight">Please enter a valid weight !</string>
    <string name="alert_title_clear_cache">Clear Bluetooth Cache?</string>
    <string name="alert_message_clear_cache">Will clear all cache information of connected device. Connection will be lost. Do you want to continue?</string>
    <string name="alert_message_delete_log">Do you want to delete this log?</string>
    <string name="alert_message_ota_cancel">Do you want to cancel the OTA update?</string>
    <string name="alert_message_ota_resume">Do you want to resume the OTA Update?</string>
    <string name="alert_message_ota_pending">You have firmware upgrade in progress. Going back will stop the firmware upgrade and disconnect from the device. Do you want to continue?</string>
    <string name="alert_message_ota_user_warning">While firmware upgrade is in progress don\'t press back button or home button. Please stay in the page till the upgrade is complete</string>
    <string name="alert_message_write_error">Error occurred in writing data.</string>
    <string name="alert_message_ota_error">Firmware update canceled\nError: </string>
    <string name="alert_message_silicon_id_error">Error: The SiliconID or SiliconRev does not match</string>
    <string name="alert_message_checksum_error">Error: The checksum do not match</string>
    <string name="alert_message_row_out_of_bounds_error">Error: The row number exceeds the bounds</string>
    <string name="alert_message_write_error_code">Error code:</string>
    <string name="alert_message_try_again">Please try again.</string>
    <string name="alert_message_hid_warning">HID service related access may be restricted by the OS. Accessing the associated characteristics and descriptor may cause the app to crash</string>
    <string name="alert_message_file_copy">A cyacd file with the same name exists in CySmart folder! Do you want to replace the existing cyacd file?</string>
    <string name="alert_message_service_undiscovered">No services found</string>
    <string name="progress_tile_service_discovering">Service Discovery</string>
    <string name="progress_message_service_discovering">Discovering services. Please wait.</string>
    <string name="progress_message_reconnect"> Reconnecting to device. Please wait.</string>
    <string name="device_unknown">Unknown device</string>
    <string name="device_ble_not_supported">Bluetooth Low Energy not supported on device</string>
    <string name="device_bluetooth_on">Bluetooth turned on successfully</string>
    <string name="device_bluetooth_not_supported">Bluetooth not supported on device</string>
    <string name="device_signal_strength">RSSI:</string>
    <string name="device_signal_strength_unit">dBm</string>
    <string name="device_connected_state">已连接</string>
    <string name="device_disconnected_state">未连接</string>
    <string name="div_manufacturer_name">Manufacturer Name </string>
    <string name="div_model_name">Model Number </string>
    <string name="div_serial_name">Serial Number </string>
    <string name="div_hardware_name">Hardware Revision </string>
    <string name="div_firmware_name">Firmware Revision </string>
    <string name="div_software_name">Software Revision </string>
    <string name="div_system_name">System ID </string>
    <string name="div_regulatory_name">Regulatory Certification Data List </string>
    <string name="div_pnp_name">PnP ID </string>
    <string name="ota_list">Select Upgrade Option</string>
    <string name="ota_file_list">Select Firmware Upgrade files</string>
    <string name="ota_list_app_download">Application Upgrade</string>
    <string name="ota_list_app_stack_down_comb">Application and Stack Upgrade (Combined Files)</string>
    <string name="ota_list_app_stack_down_sep">Application and Stack Upgrade (Separate Files)</string>
    <string name="ota_upgrade">UPGRADE</string>
    <string name="ota_next">NEXT</string>
    <string name="ota_stop">STOP</string>
    <string name="ota_file_read">Reading file, Please wait..</string>
    <string name="ota_file_read_complete">File Read Completed</string>
    <string name="ota_file_writ">Writing file, Please wait..</string>
    <string name="ota_enter_bootloader">Executing Enter Bootloader Command…</string>
    <string name="ota_get_flash_size">Executing Get Flash Size Command…</string>
    <string name="ota_program_row">Firmware Upgrade in progress…</string>
    <string name="ota_verify_row">Firmware Upgrade in progress…</string>
    <string name="ota_verify_checksum">Executing Verify Checksum Command…</string>
    <string name="ota_end_bootloader">Executing Exit Bootloader Command…</string>
    <string name="ota_end_success">Firmware upgrade completed successfully.</string>
    <string name="toast_ota_dev_address">Different devices....!!</string>
    <string name="toast_ota_no_update">No update found</string>
    <string name="toast_ota_pending">You have a Second file to Upgrade.</string>
    <string name="toast_ota_completed">OTA successfully Completed</string>
    <string name="toast_ota_one_completion">Stack successfully Updated. Please select the same profile to Upgrade the Application</string>
    <string name="ota_title">OTA Firmware Upgrade</string>
    <string name="ota_stack_file">Select the Stack Upgrade file</string>
    <string name="ota_app_file">Select the Application Upgrade file</string>
    <string name="ota_toast_stack_file_selected">Stack file selected</string>
    <string name="ota_toast_pair">Please PAIR the device before starting the Upgrade</string>
    <string name="ota_notification_title">CySmart</string>
    <string name="ota_notification_ongoing">OTA Upgrade in progress</string>
    <string name="ota_notification_stack_file">Stack upgrade completed successfully. Application upgrade pending.</string>
    <string name="ota_notification_both_file">OTA Firmware Upgrade</string>
    <string name="ota_upgradeFile_title">Upgrade Files</string>
    <string name="ota_alert_invalid_file">Invalid or corrupted file</string>
    <string name="ota_alert_file_application">Select a file for application upgrade!</string>
    <string name="ota_alert_file_applicationstackcomb">Select a file for both stack and application upgrade with combined file!</string>
    <string name="ota_alert_file_applicationstacksep_app_sel">Select the application upgrade file to proceed!</string>
    <string name="ota_alert_file_applicationstacksep_stack_sel">Select the stack upgrade file to proceed!</string>
    <string name="gatt_services_heading">Services</string>
    <string name="gatt_services_read">Read</string>
    <string name="gatt_services_write">Write</string>
    <string name="gatt_services_notify">Notify</string>
    <string name="gatt_services_indicate">Indicate</string>
    <string name="gatt_services_details">Details</string>
    <string name="gatt_descriptors_details">Descriptor Details</string>
    <string name="gatt_services">Service</string>
    <string name="gatt_charateristic">Characteristic</string>
    <string name="gatt_descriptor">Descriptor</string>
    <string name="gatt_descriptor_hex_value">Descriptor HEX Value</string>
    <string name="gatt_descriptor_value">Descriptor Value</string>
    <string name="gatt_services_ascii">ASCII</string>
    <string name="gatt_services_hex">HEX</string>
    <string name="gatt_services_date">Date</string>
    <string name="gatt_services_time">Time</string>
    <string name="gatt_char_properties">Properties : </string>
    <string name="gatt_services_stop_notify">Stop Notify</string>
    <string name="gatt_services_stop_indicate">Stop Indicate</string>
    <string name="gatt_details_popup_ok">OK</string>
    <string name="gatt_details_popup_cancel">Cancel</string>
    <string name="gatt_details_popup_heading">Enter Hex values</string>
    <string name="gatt_details_descriptors">Descriptors</string>
    <string name="gatt_details_ascii_popup_heading">Enter ASCII values</string>
    <string name="profile_control_unknown_service">Unknown Service</string>
    <string name="profile_control_no_device_message">Pull down to refresh…</string>
    <string name="profile_control_device_scanning">Refreshing, Please wait…</string>
    <string name="profile_cannot_connect_message">Cannot connect to the device</string>
    <string name="profile_control_stop_notification_toast">Notifications disabled</string>
    <string name="profile_control_stop_indication_toast">Indications disabled</string>
    <string name="profile_control_stop_both_notify_indicate_toast">All indications and notifications disabled</string>
    <string name="enable_notify_failed">Failed to enable notification(s).
        If you see this error repeatedly, disconnect and connect back to the device.</string>
    <string name="data_logger_no_log">No Logs Found</string>
    <string name="data_logger_directory">CySmart</string>
    <string name="data_logger_characteristic_ascii_value">Characteristic ASCII value </string>
    <string name="data_logger_characteristic_hex_value">Characteristic HEX value </string>
    <string name="data_logger_history">History</string>
    <string name="data_logger_timestamp">Showing data logs up to "</string>
    <string name="data_logger_scroll_end">Scroll down</string>
    <string name="profile_control_fragment">Services</string>
    <string name="capsense">CapSense</string>
    <string name="health_thermometer_fragment">Health Thermometer</string>
    <string name="graph">Graph</string>
    <string name="log">Log</string>
    <string name="share">Share</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="rgb_led">RGB LED</string>
    <string name="device_info">Device Information</string>
    <string name="gatt_db">GATT DB</string>
    <string name="data_logger">Data Logger</string>
    <string name="glucose_fragment">Glucose</string>
    <string name="gatt_characteristics_heading">Characteristics</string>
    <string name="gatt_descriptors_heading">Descriptors</string>
    <string name="profile_scan_fragment">BLE Devices</string>
</resources>