<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fitsSystemWindows="true"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:subtitleTextAppearance="@style/ToolbarSubTitle"
        android:theme="@style/ToolbarTheme"
        android:titleTextAppearance="@style/ToolbarTitle">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/device_info"
            android:textSize="@dimen/txt_large"
            android:textColor="@color/white"/>
    </android.support.v7.widget.Toolbar>
<ScrollView
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_device_information_parent_dev_info"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        android:divider="@drawable/seperator"
        android:showDividers="middle|end">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="44dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_manufacturer_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/activity_device_information_div_manufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_model_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/activity_device_information_div_model"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_serial_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_hardware_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_hardware"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_firmware_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_firmware"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_software_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_software"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_system_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_regulatory_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_regulatory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="44dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/div_pnp_name"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_device_information_div_pnp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:textColor="@color/txt_black_middle"
            android:textSize="@dimen/txt_smaller" /> 
     </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
